--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,7 @@ RewriteEngine on
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^api.* /theway/api/index.php [L]
+RewriteRule ^([^/][0-9].*)?$ /theway/index.php?section=$1 [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^api/.* /theway/api/index.php [L]
