--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ RewriteEngine on
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/][0-9].*)?$ /theway/index.php?section=$1 [L]
+RewriteRule ^([^/][0-9].*)?$ /index.php?section=$1 [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^api/.* /theway/api/index.php [L]
+RewriteRule ^api/.* /api/index.php [L]
